--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Bongodeshiyo Memesomogro Official</title>
 	</head>
 	<body style="background-color:rgb(0,102,102);">
-		<a href="file:///F:/html%20baph%20projects/baph_project_bongomemes.html" target="blank"><img src="bongo.jpg" height="300" width="100%"></a>
+		<a href="https://66baphomet.github.io/bongomemes2/" target="blank"><img src="bongo.jpg" height="300" width="100%"></a>
 
 		<h1><u> This is the official website of Bongodeshiyo Memesomogro </u></h1>
 
