--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Bongodeshiyo Memesomogro Official</title>
 	</head>
 	<body style="background-color:rgb(0,102,102);">
-		<a href="https://66baphomet.github.io/bongomemes2/" target="blank"><img src="bongo.jpg" height="300" width="100%"></a>
+		<a href="https://66baphomet.github.io/bongomemes/" target="blank"><img src="bongo.jpg" height="300" width="100%"></a>
 
 		<h1><u> This is the official website of Bongodeshiyo Memesomogro </u></h1>
 
@@ -13,7 +13,7 @@
 
 		<p style="font-size:150%"> Click here to visit our <a href="https://www.facebook.com/randompropaganda" target="blank">Facebook Page</a></p>
 		
-		<p style="font-size:150%"> Meet our <a href="file:///F:/html%20baph%20projects/adminpanel.html" target="blank">Admin Panel</a></p>
+		<p style="font-size:150%"> Meet our <a href="https://66baphomet.github.io/bongomemes2/" target="blank">Admin Panel</a></p>
 
 
 
