--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <br/>
                 <br/>
 
-                <p>This webpage was created by Sabbir Ahmed Dipto</p>
+                <marquee>This webpage was created by Sabbir Ahmed Dipto</marquee>
 
 	</body>
 </html>
