--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</style>
 	</head>
 	<body class="decobody">
-		<a href="file:///F:/html%20baph%20projects/baph_project_bongomemes.html" target="blank"><img src="bongo2.jpg" height="200" width="100%"></a>
+		<a href="https://66baphomet.github.io/bongomemes/" target="blank"><img src="bongo2.jpg" height="200" width="100%"></a>
 
 		<h1>This is the official website of Bongodeshiyo Memesomogro </h1>
 
@@ -31,7 +31,7 @@
 
 		<p> Click here to visit our <a href="https://www.facebook.com/randompropaganda" target="blank">Facebook Page</a></p>
 		
-		<p> Meet our <a href="file:///F:/html%20baph%20projects/adminpanel.html" target="blank">Admin Panel</a></p>
+		<p> Meet our <a href="https://66baphomet.github.io/bongomemes2/" target="blank">Admin Panel</a></p>
 
 
 		<h1> Send us your Feedback </h1>
