--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Bongodeshiyo Memesomogro Official</title>
 		<style>
 			h1{
-				color:#286B36;
+				color:#26A69A;
 				background-color:black;
 				font-family:'Noto Sans JP', sans-serif;
 			}
 			
 			.decobody{
-				background-color:#286B36; 
+				background-color:#26A69A;
 				color:black;
 			}
 			
