--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<title>Bongodeshiyo Memesomogro Official</title>
 		<style>
 			h1{
-				color:#66BB6A;
+				color:#9CCC65;
 				background-color:black;
 				font-family:'Noto Sans JP', sans-serif;
 			}
 			
 			.decobody{
-				background-color:#66BB6A;
+				background-color:#9CCC65;
 				color:black;
 			}
 			
